--- a/tools.html
+++ b/tools.html
@@ -67,6 +67,34 @@
                 <h4>unsplash APIs</h4>
             </a>
         </div>
+        <div class="col-sm-6 cols">
+            <a href="https://metatags.io/">
+                <img src="assets/meta.png" class="img-fluid rounded-3" alt="">
+                <br>
+                <h4>meta tags</h4>
+            </a>
+        </div>
+        <div class="col-sm-6 cols">
+            <a href="http://extractcss.com/">
+                <img src="assets/extracts%20css.png" class="img-fluid rounded-3" alt="">
+                <br>
+                <h4>extract css</h4>
+            </a>
+        </div>
+        <div class="col-sm-6 cols">
+            <a href="https://www.zerotheme.com/">
+                <img src="assets/freetemp.png" class="img-fluid rounded-3" alt="">
+                <br>
+                <h4>teplates css</h4>
+            </a>
+        </div>
+        <div class="col-sm-6 cols">
+            <a href="https://themewagon.com/">
+                <img src="assets/temp.png" class="img-fluid rounded-3" alt="">
+                <br>
+                <h4>templates css</h4>
+            </a>
+        </div>
     </div>
 </div>
 
