--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </a>
         </div>
         <div class="col-sm-6 cols">
-            <a href="https://smalldev.tools/">
+            <a href="https://smalldev.tools/index.html">
                 <img src="assets/devtools.png" class="img-fluid rounded-3" alt="">
                 <br>
                 <h4>20+ useful devtools</h4>
